--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,8 @@ html,body{
    background-color: #6c757d;
     height: 550px;
 }
+
+.partFive{
+    height: 300px;
+    background-color: deepskyblue;
+}
